--- a/src/index.css
+++ b/src/index.css
@@ -1,66 +1,64 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit&family=Roboto&display=swap');
-:root{
+@import url("https://fonts.googleapis.com/css2?family=Kanit&family=Roboto&display=swap");
+:root {
   --background-color-main: hsl(0, 0%, 4%);
   --background-color-navbar: hsla(0, 0%, 0%, 1);
   --background-color-menu: hsla(0, 0%, 0%, 0.8);
   --background-color-footer: hsla(0, 0%, 0%, 1);
   --background-color-tags: hsl(240, 76%, 35%);
-  --background-color-tags-hover:  hsl(12, 100%, 50%);
-  --background-color-comments:  hsl(0, 0%, 15%);
+  --background-color-tags-hover: hsl(12, 100%, 50%);
+  --background-color-comments: hsl(0, 0%, 15%);
   --text-color: white;
   --blogs-box-shadow: 0 0 5px hsl(0, 0%, 50%);
 }
-.light-mode{
+.light-mode {
   --background-color-main: hsl(0, 0%, 90%);
   --background-color-navbar: hsla(0, 0%, 100%, 0.4);
   --background-color-menu: hsla(0, 0%, 100%, 0.4);
-  --background-color-footer:  hsl(0, 0%, 3%);
-  --background-color-comments:  hsl(0, 0%, 85%);
+  --background-color-footer: hsl(0, 0%, 3%);
+  --background-color-comments: hsl(0, 0%, 85%);
   --text-color: black;
   --blogs-box-shadow: 0 0 5px hsl(0, 0%, 0%);
 }
 
-body{
-  font-family: 'Roboto', sans-serif;
+body {
+  font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
   background-color: var(--background-color-main);
   transition: background-color 0.5s ease, color 0.5s ease;
-  
 }
 
 /*Loading Page*/
-.loading{
+.loading {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100dvh;
+  height: 100vh;
 }
-.loading img{
+.loading img {
   width: 100px;
 }
 
-
 /*Not Found Page*/
-.not-found{
+.not-found {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin:5% ;
-  height: calc(100dvh - 300px);
-  color:  var(--text-color);
+  margin: 5%;
+  height: calc(100vh - 300px);
+  color: var(--text-color);
   text-align: center;
 }
-.not-found h1{
+.not-found h1 {
   font-size: 10rem;
   color: hsl(12, 100%, 50%);
 }
-.not-found p{
+.not-found p {
   font-size: 3rem;
   font-weight: bolder;
 }
-.not-found a{
+.not-found a {
   background-color: hsl(12, 100%, 50%);
   box-shadow: 0 0 10px hsl(12, 100%, 50%);
   border-radius: 10px;
@@ -69,22 +67,22 @@ body{
   padding: 20px;
   margin: 20px;
   font-weight: bolder;
-  transition:  background-color 0.5s ease, box-shadow 0.5s ease;;
+  transition: background-color 0.5s ease, box-shadow 0.5s ease;
 }
-.not-found a:hover{
+.not-found a:hover {
   background-color: hsl(12, 100%, 45%);
   box-shadow: 0 0 10px hsl(12, 100%, 10%);
 }
-.not-found .not-found-portfolio h1{
+.not-found .not-found-portfolio h1 {
   font-size: 3rem;
   color: hsl(12, 100%, 50%);
 }
-@media (max-width: 1100px), (max-height:850px) {
-  .not-found{
-    height: calc(100dvh);
+@media (max-width: 1100px), (max-height: 850px) {
+  .not-found {
+    height: calc(100vh);
     margin: 0%;
   }
-  .not-found h1{
+  .not-found h1 {
     font-size: 5rem;
   }
 }
